# alphafold

./: .gitignore  README.md  environment.yml  install.sh  pyrightconfig.json  run_alphafold.py  run_alphafold_test.py  setup.cfg  setup.py  utils.py
alphafold/: utils.py  version.py
alphafold/common/: __init__.py  devices.py  profiler.py  protein.py  residue_constants.py
alphafold/data/: feature_processing.py  msa_pairing.py  parsers.py  pipeline.py  pipeline_multimer.py  templates.py
alphafold/data/tools/: __init__.py  hhblits.py  hhsearch.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  kalign.py  utils.py
alphafold/model/: config.py  data.py  folding.py  folding_multimer.py  model.py  modules.py  modules_multimer.py  utils.py
alphafold/model/tf/: input_pipeline.py
alphafold/relax/: amber_minimize.py  relax.py
docker/: run_docker.py
notebooks/: AlphaFold.ipynb
patch/: pdbfixer.patch
scripts/: GPCRdb.csv  download_all_data.sh  download_gpcr100.sh  download_mgnify.sh  download_pdb_mmcif.sh  download_pdb_seqres.sh  download_uniprot.sh  download_uniref90.sh  filter_pdb_seqres.py  mgnify.txt  uniprot.txt  uniprot_sprot.txt  uniprot_trembl.txt  uniref90.txt
test/: alphafold_test
