[metadata]
name = alphafold
version = 2.1.0
description = An implementation of the inference pipeline of AlphaFold v2.0. This is a completely new model that was entered as AlphaFold2 in CASP14 and published in Nature.
author = DeepMind
author_email = alphafold@deepmind.com
license = Apache License, Version 2.0
url = https://github.com/seoklab/alphafold
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
tests_require = mock

[yapf]
based_on_style = google
indent_width = 2
column_limit = 80
allow_multiline_dictionary_keys = true
spaces_around_power_operator = true
split_before_arithmetic_operator = true
split_before_bitwise_operator = true
split_before_logical_operator = true

[flake8]
ignore = E126,E266,E4,E74,F403,F405,W503
per-file-ignores =
    alphafold/common/residue_constants.py: E241,E501
indent-size = 2
max-line-length = 80
